@startuml
' Enum de papéis
enum Role {
  USUARIO
  ADMIN
}

' Classe Pessoa
class Usuario {
  -id: Long
  -nome: String
  -email: String
  -senhaHash: String
  -role: Role
}

' Classe Usuario
class Aluno {
  -xpTotal: int
  -nivel: int
  -dataCadastro: Date
}

' Classe Administrador
class Administrador {
}

' Relacionamentos
Aluno --|> Usuario
Administrador --|> Usuario
Usuario --> Role

@enduml
